--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + React + TS + Tailwind + Prettier</title>
+    <title>
+      Vite + TS + React + Tailwind + Prettier + React-Router + Vercel + Vercel
+      Analytics
+    </title>
   </head>
   <body>
     <div id="root"></div>
